--- a/src/index.css
+++ b/src/index.css
@@ -172,6 +172,10 @@ span {
   color: #fca311;
 }
 
+.research-contenair {
+  color: white;
+}
+
 @media screen and (max-width: 700px) {
   .adresse {
     width: 80%;
